--- a/clouddisk/package.json
+++ b/clouddisk/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "v-viewer": "^1.5.1",
     "view-design": "^4.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
